--- a/index.html
+++ b/index.html
@@ -10,42 +10,58 @@
     <!-- My Style Sheet -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/709bc9616f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
+        
         <header>
             <div class="logo">
                 <img src="/images/logo-roar-bikes.svg" alt="roar bikes logo">
             </div>
             <nav>
-                Book Online     About     Contact
+                <a href="#" class="navbutton">Book Online</a>
+                <a href="#" class="navbutton">About</a>
+                <a href="#" class="navbutton">Contact</a>
             </nav>
         </header>
+
         <main>
             <div class="herobox1">
                 <h1>Mobile bike repairs.</h1>
                 <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.</p>
                 <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.</p>
+                <a href="test-page.html" class="mybutton">Book Online</a>
             </div>
             <div class="herobox2">
                 <img src="/images/image-bike-repair-service.jpg" alt="person servicing a bike">
             </div>
-
         </main>
+        
         <div class="cards">
             <div class="card1">
-                <h2>Book Online</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic, corporis atque nam sed harum?</p>
+                <a href="#">
+                    <i class="fas fa-bicycle"></i>
+                    <h2>Book Online</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic, corporis atque nam sed harum?</p>
+                </a>
             </div>
             <div class="card2">
-                <h2>Service Types</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic, corporis atque nam sed harum?</p>
+                <a href="#">
+                    <i class="fas fa-cog"></i>
+                    <h2>Service Types</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic, corporis atque nam sed harum?</p>
+                </a>
             </div>
             <div class="card3">
-                <h2>Call for Advice</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic, corporis atque nam sed harum?</p>
+                <a href="#">
+                    <i class="fas fa-phone"></i>
+                    <h2>Call for Advice</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem hic, corporis atque nam sed harum?</p>
+                </a>
             </div>
         </div>
+
     </div>
 </body>
 </html>
