--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=], initial-scale=1.0">
-    <title>Roar Cycle - Bike Repairs in Dublin</title>
+    <title>Roar Cycle - Contact Us Details Address Phone Number</title>
+    <meta name="description" content="Contact deatils for Roar">
     <!-- Eric Meyers Reset -->
     <link rel="stylesheet" href="css-reset.css">
     <!-- My Style Sheet -->
@@ -37,22 +38,15 @@
                     <a href="#">About</a>
                 </div>
                 <div class="navbutton">
-                    <a href="contact-us.html">Contact</a>
+                    <a href="#">Contact</a>
                 </div>
             </nav>
         </header>
 
-        <main>
-            <div class="herobox1">
-                <h1>Mobile bike repairs.</h1>
-                <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.</p>
-                <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.</p>
-                <a href="test-page.html" class="mybutton">Book Online</a>
-            </div>
-            <div class="herobox2">
-                <img src="/images/image-bike-repair-service.jpg" alt="person servicing a bike">
-            </div>
-        </main>
+        <div class="main2">
+            <h1>Contact Us</h1>
+            <p>Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
+        </div>
         
         <div class="cards">
             <div class="card1">
