--- a/contact-us.html
+++ b/contact-us.html
@@ -46,6 +46,51 @@
         <div class="main2">
             <h1>Contact Us</h1>
             <p>Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.</p>
+
+            <form action="" method="post">
+
+                <div class="inputwrapper">
+                    <label for="name" class="newline">First Name</label>
+                    <input type="text" name="name" id="name" placeholder="First Name">
+                </div>
+
+                <div class="inputwrapper">
+                    <label for="email" class="newline">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+
+                <div class="inputwrapper">
+                    <textarea name="message" id="message" cols="100" rows="10" placeholder="Let us know what you think" class="newline"></textarea>
+                </div>
+
+                <div class="inputwrapper">
+                    <input type="checkbox" name="email-sub" id="email-sub" value="yes-sign-me-up" checked>
+                    <label for="email-sub">Sign Up for Email Newsletter</label>
+                </div>
+
+                <div class="inputwrapper">
+                    <p>How would you like to be contacted?</p>
+                    <input type="radio" name="contact-pref" id="phone" value="phone">
+                    <label class="margin-right-a" for="phone">Phone</label>
+                    <input type="radio" name="contact-pref" id="email2" value="email">
+                    <label class="margin-right" for="email2">Email</label>
+                </div>
+
+                <div class="inputwrapper">
+                    <select name="county" id="county">
+                        <option value="None-Chosen">Choose Country</option>
+                        <option value="Unite States">Unite States</option>
+                        <option value="United Kingdom">United Kingdom</option>
+                        <option value="France">France</option>
+                        
+
+                    </select>
+                </div>
+
+                <input type="submit" value="Submit" class="mybutton">
+
+            </form>
+
         </div>
         
         <div class="cards">
